# just-agents

./: .env.example  .gitignore  .pypirc  .readthedocs.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  entrypoint.sh  environment.yaml  environment_core.yaml  environment_qwen.yaml  environment_qwen2.yaml  install_locally.sh  publish.sh  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  pytest.ini  setup.py  test.py
coding/: README.md  pyproject.toml
coding/containers/biosandbox/: env.yaml
coding/containers/sandbox/: Dockerfile  env.yaml
coding/just_agents/coding/: tools.py
core/: README.md  pyproject.toml
core/just_agents/: JUST_LOCATOR_README.md  __init__.py  base_agent.py  base_memory.py  data_classes.py  just_async.py  just_bus.py  just_locator.py  just_profile.py  just_schema.py  just_serialization.py  just_tool.py  llm_options.py  mcp_client.py  rotate_keys.py  types.py
core/just_agents/config/: agent_profiles.yaml
core/just_agents/core/: base_agent.py  just_serialization.py
core/just_agents/interfaces/: agent.py  function_call.py  memory.py  protocol_adapter.py  streaming_protocol.py
core/just_agents/patterns/: README.md  chain_of_throught.py  reflection_agent.py
core/just_agents/protocols/: echo_protocol.py  litellm_protocol.py  mcp_protocol.py  openai_classes.py  openai_streaming.py  protocol_factory.py  sse_streaming.py
core/just_agents/simple/: README.md  chat_agent.py  cot_agent.py  llm_session.py  memory.py  utils.py
core/just_agents/streaming/: abstract_streaming.py  openai_protocol_adapter.py  protocol_factory.py  qwen2_streaming.py
examples/: README.md  agent_from_yaml.py  bioinformatic_agent.py  bioinformatic_prompt.txt  code_agent.py  code_agent.yaml  code_agent2.py  code_agent2.yaml  code_agent3.py  delegation.py  example_prompts.yaml  function_calling.py  letter_count.py  pyproject.toml  rag.py  run_code_with_output.py  run_simple_code.py  schema_roundtrip_demo.py  schema_validation_example.py  simple_code_agent.py  simple_code_agent.yaml  test_sandbox.py  two_agent_interaction.py  two_agent_interection.py  two_agents_chat.py  yaml_initialization_example.py  yaml_initialization_example.yaml  yaml_initialization_example_new.yaml
examples/basic/: agent_from_yaml.py  agent_from_yaml.yaml  agent_serialization.py  base_agent_example.py  base_agent_from_schema.py  function_calling.py  with_citations.py
examples/coding/: bioinformatic_agent.py  bioinformatic_agent.yaml  code_agent.yaml  code_agent_biopython.py  code_agent_genomics.py  code_agent_scRNA_analysis.py  coding_agents.yaml  get_gse.py  mounts.py  simple_code_agent.py  simple_code_agent.yaml  tools.py  webscrapper.py  webscrapper.yaml
examples/coding/gse_solution/: bioagent.yaml  get_gse.py  get_gse_minimal.py  helpers.py  llm_self_assessment.txt  pca_plot.py  pca_quantile_plot.py
examples/just_agents/basic/: agent_profiles.yaml  agent_serialization.py  chain_of_thought_agent_example.py  function_calling_example.py  with_citations.py
examples/just_agents/coding/: bioinformatic_agent.py  chain_of_though_coding_agent.py  code_agent_biopython.py  code_agent_genomics.py  code_agent_scRNA_analysis.py  simple_code_agent_.py  webscrapper.py
examples/just_agents/examples/: bip_bop_server.py  tools.py
examples/just_agents/multiagent/: glucose_dao_reflection.py  trump_and_camala_debate.py
examples/multiagent/: glucose_dao_reflection.py  simple_reflection.py  trump_and_camala.moderated.py  trump_and_camala_debate.py  two_agents_chat.py
examples/notebooks/: 01_just_agents_colab.ipynb  02_sqlite_example.ipynb  03_coding_agent.ipynb  04_multi_agent_sqlite_example.ipynb  05_embeddings_example.ipynb  agent_profiles.yaml  open_genes.sqlite
examples/tools/: rag.py  test_sandbox.py  weather.py
examples/web/: nice_agent.yaml  nice_agent_chat_ui_config.env  nice_web.py
just-agents-coding/: pyproject.toml
just-agents-tools/: pyproject.toml
just_agents/: __init__.py  base_agent.py  base_memory.py  chat_agent.py  cot_agent.py  just_agent.py  just_profile.py  just_serialization.py  just_tool.py  just_yaml.py  llm_options.py  llm_session.py  memory.py  py.typed  pyproject.toml  reflection_agent.py  secretary_agent.py  thinking.py  thinking_agent.py  types.py  utils.py
just_agents/config/: agent.yaml  agent_prompts.yaml  cot_agent_prompt.yaml  llm_session_schema.yaml
just_agents/core/: just_tool.py  rotate_keys.py  types.py
just_agents/core/interfaces/: IAgent.py
just_agents/interfaces/: IAddAllMessages.py  IAgent.py  IMemory.py  IProtocolAdapter.py
just_agents/meta/: __init__.py
just_agents/patterns/: chain_of_throught.py  reflection_agent.py
just_agents/simple/: README.md  __init__.py  chat_agent.py  cot_agent.py  utils.py
just_agents/streaming/: abstract_streaming.py  chain_of_thought.py  openai_protocol_adapter.py  openai_streaming.py  protocol_factory.py  qwen2_streaming.py  qwen_streaming.py
just_agents/tools/: search.py
just_agents_examples/: pyproject.toml  tools.py
just_agents_examples/basic/: agent_from_yaml.py  agent_from_yaml.yaml  agent_profiles.yaml  agent_serialization.py  agents_profiles.yaml  chain_of_thought_agent_example.py  cot_agent_example.py  function_calling.py  function_calling_example.py  thinking_agent_example.py  with_citations.py
just_agents_examples/coding/: bioinformatic_agent.py  bioinformatic_agent.yaml  chain_of_though_coding_agent.py  code_agent.yaml  code_agent_biopython.py  code_agent_genomics.py  code_agent_scRNA_analysis.py  mounts.py  simple_code_agent.py  simple_code_agent_.py  tools.py  webscrapper.py  webscrapper.yaml
just_agents_examples/multiagent/: glucose_dao_reflection.py  simple_reflection.py  trump_and_camala_debate.py  two_agents_chat.py
just_agents_examples/notebooks/: 01_just_agents_colab.ipynb  02_sqlite_example.ipynb  03_coding_agent.ipynb
just_agents_router/: pyproject.toml  secretary_agent.py
just_agents_web/: pyproject.toml  web.py
router/: README.md  pyproject.toml
tools/: README.md  pyproject.toml
tools/just_agents/tools/: db.py  search.py  (+5 more)
web/: README.md  pyproject.toml
(+170 files in other folders)
