[tool.poetry]
name = "just-agents"
version = "0.0.0"
description = "Just Agents"
authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Livia Zaharia <liviazaharia2020@gmail.com>"
]
maintainers = [
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
readme = "README.md"
license = "Apache 2.0"
keywords = ["python", "llm", "agents", "AI", "machine-learning"]
packages = [{include = "just_agents"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
just-agents-core = "*"
just-agents-tools = "*"
just-agents-coding = "*"
just-agents-web = "*"
just-agents-router = "*"
just-agents-examples = "*"




[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
python-dotenv = "*"
langfuse = ">=2.59.2"
just-agents-core = {path = "core", develop = true}
just-agents-tools = {path = "tools", develop = true}
just-agents-coding = {path = "coding", develop = true}
just-agents-web = {path = "web", develop = true}
just-agents-router = {path = "router", develop = true}
just-agents-examples = {path = "examples", develop = true}


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[[tool.poetry.source]]
name = "cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.scripts]
run-agent = "just_agents.web.run_agent:app"
deploy-agent = "just_agents.web.deploy_agent:app"

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.4.1"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true