[tool.poetry]
name = "just-agents-coding"
version = "0.5.5"  # This will be replaced by poetry-dynamic-versioning
description = "Just Agents - Coding Components"
authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
maintainers = [
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
just-agents-core = "*"
llm-sandbox = ">=0.2.2"

# Add this section for development
[tool.poetry.group.dev.dependencies]
just-agents-core = {path = "../core", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true