[tool.poetry]
name = "just-agents-coding"
version = "0.6.1"  # This will be replaced by poetry-dynamic-versioning
description = "Just Agents - Coding Components"
authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
maintainers = [
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
just-agents-core = "*"
requests = ">=2.26.0"
llm-sandbox = {version = ">=0.2.4", extras = ["podman"]}

# Add this section for development
[tool.poetry.group.dev.dependencies]
just-agents-core = {path = "../core", develop = true}

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.4.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true