[tool.poetry]
name = "just-agents-examples"
version = "0.5.1"
description = "Just Agents - Examples code"
authors = ["Alex Karmazin <karmazinalex@gmail.com>"]
maintainers = ["Anton Kulaga <antonkulaga@gmail.com>"]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
just-agents-core = ">=0.5.1"
just-agents-tools = ">=0.5.1"
just-agents-coding = ">=0.5.1"
just-agents-web = ">=0.5.1"
just-agents-router = ">=0.5.1"
docker = ">=7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"