[tool.poetry]
name = "just-agents-examples"
version = "0.0.0"
description = "Just Agents - Examples code"
authors = ["Alex Karmazin <karmazinalex@gmail.com>"]
maintainers = ["Anton Kulaga <antonkulaga@gmail.com>"]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
just-agents-tools = "*"
just-agents-coding = "*"
just-agents-web = "*"
just-agents-router = "*"
coolname = ">=2.2.0"
fastmcp = ">=2.2.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
just-agents-tools = { path = "../tools", develop = true }
just-agents-coding = { path = "../coding", develop = true }
just-agents-web = { path = "../web", develop = true }
just-agents-router = { path = "../router", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.4.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true