[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "just-agents"
version = "0.3.1"
description = "Just Agents - Base Package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alex Karmazin", email = "karmazinalex@gmail.com" },
]
maintainers = [
    { name = "Anton Kulaga", email = "antonkulaga@gmail.com" },
]
keywords = ["python", "llm", "science", "review", "agents", "AI"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "litellm>=1.52.9",
    "Deprecated>=1.2.15",
    "requests",
    "numpydoc",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/longevity-genie/just-agents"
"Bug Tracker" = "https://github.com/longevity-genie/just-agents/issues"
Documentation = "https://just-agents.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["just_agents*", "config*"]
exclude = [
    "logs*",
    "output*", 
    "*.egg-info",
    "build",
    "dist"
]

[tool.setuptools.package-data]
"config" = ["*.yaml", "*.yml"]
"just_agents" = ["*.yaml", "*.yml"] 