[project]
name = "just_agents_web"
version = "0.3.1"
description = "Just Agents - Web. It allows runing openai API for the agent in the browser."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "just-agents==0.3.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["just_agents_web*", "config*"]
exclude = [
    "*.egg-info",
    "build",
    "dist"
]

[tool.setuptools.package-data]
"config" = ["*.yaml", "*.yml"]
"just_agents_web" = ["*.yaml", "*.yml"] 