[tool.poetry]
name = "just-agents-router"
version = "0.0.0"  # This will be replaced by poetry-dynamic-versioning
description = "Just Agents - Router Components"
authors = [
    "Newton Winter <isoutthere@gmail.com>",
    "Alex Karmazin <karmazinalex@gmail.com>"
]
maintainers = [
    "Newton Winter <isoutthere@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
just-agents-core = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
just-agents-core = {path = "../core", develop = true}

[build-system]
requires = ["poetry-core>=2.1.0", "poetry-dynamic-versioning>=1.9.1,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true