[tool.poetry]
name = "just-agents-tools"
version = "0.5.3"
description = "Just Agents - Tools Components"
authors = ["Alex Karmazin <karmazinalex@gmail.com>", "Anton Kulaga <antonkulaga@gmail.com>", "Newton Winter <isoutthere@gmail.com>"]
maintainers = ["Anton Kulaga <antonkulaga@gmail.com>", "Newton Winter <isoutthere@gmail.com>"]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
semanticscholar = ">=0.8.4"
typer = ">=0.13.0"

[tool.poetry.group.dev.dependencies]
just-agents-core = { path = "../core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"