[tool.poetry]
name = "just-agents-web"
version = "0.5.1"
description = "Just Agents - Web. It allows runing openai API for the agent in the browser."

authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>"
]
maintainers = [
    "Anton Kulaga <antonkulaga@gmail.com>",
    "Newton Winter <isoutthere@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "just_agents" }
]
license = "MIT"
keywords = ["python", "llm", "web", "agents", "AI"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
just-agents-core = ">=0.5.1"
pycomfort = ">=0.0.17"
fastapi = ">=0.115.6"
uvicorn = ">=0.34.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
run-agent = "just_agents.web.run_agent:app"
deploy-agent = "just_agents.web.deploy_agent:app"
